[gd_scene load_steps=5 format=3 uid="uid://byar1v6thk7fg"]

[ext_resource type="Script" uid="uid://q2xmaqhxpor2" path="res://autoload/debug.gd" id="1_3pfim"]
[ext_resource type="Theme" uid="uid://clyjuwxwpddet" path="res://interface/ui_main_theme.tres" id="1_wq0eu"]
[ext_resource type="Script" uid="uid://cdpfteetdqb8w" path="res://interface/components/input_prompt.gd" id="2_xfkl1"]
[ext_resource type="Texture2D" uid="uid://cerqsn5m72bq1" path="res://interface/textures/input_prompts/xbox/xbox_a.png" id="3_dhw2d"]

[node name="Debug" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wq0eu")
script = ExtResource("1_3pfim")

[node name="FPS" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 23.0
grow_horizontal = 0
mouse_filter = 1
text = "120 FPS"

[node name="InputDeviceLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 62.0
offset_top = 754.0
offset_right = 230.0
offset_bottom = 832.0
mouse_filter = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputInfo" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 880.0
offset_right = 234.0
offset_bottom = 958.0
mouse_filter = 1
text = "asf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputPrompt" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 117.0
offset_top = 955.0
offset_right = 181.0
offset_bottom = 1019.0
texture = ExtResource("3_dhw2d")
expand_mode = 3
script = ExtResource("2_xfkl1")

[node name="DebugUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToggleTabs" type="Button" parent="DebugUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 33.0
offset_top = 33.0
offset_right = 224.0
offset_bottom = 100.0
text = "Debug UI"

[node name="TabContainer" type="TabContainer" parent="DebugUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 40.0
offset_top = 128.0
offset_right = 1317.0
offset_bottom = 783.0
current_tab = 0

[node name="Achievements" type="Control" parent="DebugUI/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Equipment" type="Control" parent="DebugUI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ConsoleContainer" type="MarginContainer" parent="DebugUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -58.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="DebugUI/ConsoleContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Console" type="LineEdit" parent="DebugUI/ConsoleContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.12899, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
keep_editing_on_text_submit = true
caret_blink = true
caret_blink_interval = 0.4

[node name="PanelContainer" type="PanelContainer" parent="DebugUI/ConsoleContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConsoleLabel" type="Label" parent="DebugUI/ConsoleContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
vertical_alignment = 1
autowrap_mode = 2
